<resources>
    <string name="app_name">kidswim</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_add_group">新建分组</string>
    <string name="action_insert_group">加入分组</string>str_add_group_unjoin_group_student
    <string name="action_add_group_details">学员加入分组</string>
    <string name="action_rollcall">课程点名</string>


    <string name="menu_home">基本信息</string>
    <string name="menu_gallery">分组列表</string>
    <string name="menu_slideshow">课程点名</string>
    <string name="menu_tools">錄入學生</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="menu_rollcall">课程点名</string>

    <string name="str_group_choice_coach">选择教练</string>
    <string name="str_group_choice_address">选择泳池</string>
    <string name="str_group_choice_group_begin_date">分组开始日期</string>
    <string name="str_group_choice_group_end_daye">分组结束日期</string>
    <string name="str_group_choice_learn_begin_time">上课开始时间</string>
    <string name="str_group_choice_course_level">选择课程级别</string>

    <string name="str_gallery_join_group">加入分组</string>
    <string name="str_gallery_create_group">创建新组</string>
    <string name="str_roll_call_confirm">完成点名</string>
    <string name="str_gallery_unjoin_sale_num">未分组人数</string>
    <string name="str_gallery_created_group_code">已建分组</string>

    <string name="str_add_group_unjoin_group_student">未加入分组学员</string>
    <string name="str_add_group_choiced_student">已选择学员</string>
    <string name="str_roll_call_choiced_student">符合条件的学员</string>

    <string name="str_insert_group_code">分组编号</string>
    <string name="str_insert_group_coach">分组教练</string>
    <string name="str_insert_group_address">分组泳池</string>
    <string name="str_insert_group_begin_date">开始日期</string>
    <string name="str_insert_group_learn_time">上课开始时间</string>

    <string name="str_roll_call_begin_time">开始时间</string>
    <string name="str_roll_call_end_time">结束时间</string>

    <string name="str_insert_group_level">课程级别</string>

    <string name="query_button">查询</string>
    <string name="confirm_button">确认</string>

</resources>
