<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/insert_group_linearLayout1"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        android:background="@drawable/underline"
        app:layout_constraintBottom_toTopOf="@+id/add_group_linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/insert_group_code_show_name"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:background="#00C7C4C4"
            android:text="@string/str_insert_group_code" />

        <TextView
            android:id="@+id/insert_group_code_show_value"
            android:layout_width="307dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="viewEnd" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/insert_group_linearLayout2"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="48dp"
        android:orientation="horizontal"
        android:background="@drawable/underline"
        app:layout_constraintBottom_toTopOf="@+id/add_group_linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/insert_group_coach_show_name"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:background="#00C7C4C4"
            android:text="@string/str_insert_group_coach" />

        <TextView
            android:id="@+id/insert_group_coach_show_value"
            android:layout_width="307dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="viewEnd" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/insert_group_linearLayout3"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="98dp"
        android:orientation="horizontal"
        android:background="@drawable/underline"
        app:layout_constraintBottom_toTopOf="@+id/add_group_linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/insert_group_address_show_name"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:background="#00C7C4C4"
            android:text="@string/str_insert_group_address" />

        <TextView
            android:id="@+id/insert_group_address_show_value"
            android:layout_width="307dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="viewEnd" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/insert_group_linearLayout4"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="148dp"
        android:orientation="horizontal"
        android:background="@drawable/underline"
        app:layout_constraintBottom_toTopOf="@+id/add_group_linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/insert_group_begin_date_show_name"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:background="#00C7C4C4"
            android:text="@string/str_insert_group_begin_date" />

        <TextView
            android:id="@+id/insert_group_begin_date_show_value"
            android:layout_width="307dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="viewEnd" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/insert_group_linearLayout5"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="198dp"
        android:orientation="horizontal"
        android:background="@drawable/underline"
        app:layout_constraintBottom_toTopOf="@+id/add_group_linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/insert_group_learn_begin_date_show_name"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:background="#00C7C4C4"
            android:text="@string/str_insert_group_learn_time" />

        <TextView
            android:id="@+id/insert_group_learn_begin_date_show_value"
            android:layout_width="307dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="viewEnd" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/insert_group_linearLayout6"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="248dp"
        android:background="@drawable/underline"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/insert_group_level_choice_name"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/str_group_choice_course_level" />

        <TextView
            android:id="@+id/insert_group_level_choice_value"
            android:layout_width="337dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="未选择"
            android:textAlignment="viewEnd" />

        <TextView
            android:id="@+id/insert_group_level_choice_value_att"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="viewEnd"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/insert_group_linearLayout7"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/underline"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/insert_group_linearLayout6">

        <TextView
            android:id="@+id/insert_group_linearLayout7_textview_1"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/str_add_group_unjoin_group_student"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RadioGroup
                android:id="@+id/insert_group_radiogroup_layout_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </RadioGroup>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/insert_group_linearLayout8"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="horizontal"
        android:background="@drawable/underline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/insert_group_linearLayout7">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="39dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_add_group_choiced_student"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/insert_group_linearLayout8_show_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/insert_group_linearLayout9"
        android:layout_width="329dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/insert_group_linearLayout8">

        <TextView
            android:id="@+id/insert_selected_sale_students_num"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="已选择0人"
            android:textAlignment="center"
            android:textSize="24sp" />

        <Button
            android:id="@+id/insert_group_button"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/confirm_button"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>