<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/roll_call_linearLayout1"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        android:background="@drawable/underline"
        app:layout_constraintBottom_toTopOf="@+id/roll_call_linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/roll_call_address_choice_name"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:background="#00C7C4C4"
            android:text="@string/str_group_choice_address" />

        <TextView
            android:id="@+id/roll_call_address_choice_value"
            android:layout_width="307dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="未选择"
            android:textAlignment="viewEnd" />

        <TextView
            android:id="@+id/roll_call_address_choice_value_att"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="viewEnd"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/roll_call_linearLayout2"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/underline"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/roll_call_begin_date_choice_name"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/str_insert_group_begin_date" />

        <TextView
            android:id="@+id/roll_call_begin_date_choice_value"
            android:layout_width="307dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="未选择"
            android:textAlignment="viewEnd" />

        <TextView
            android:id="@+id/roll_call_begin_date_choice_value_att"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="viewEnd"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/roll_call_linearLayout3"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="88dp"
        android:background="@drawable/underline"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/roll_call_begin_time_choice_name"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/str_roll_call_begin_time" />

        <TextView
            android:id="@+id/roll_call_begin_time_choice_value"
            android:layout_width="307dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="未选择"
            android:textAlignment="viewEnd" />

        <TextView
            android:id="@+id/roll_call_begin_time_choice_value_att"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="viewEnd"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/roll_call_linearLayout4"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="128dp"
        android:background="@drawable/underline"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/roll_call_end_time_choice_name"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/str_roll_call_end_time" />

        <TextView
            android:id="@+id/roll_call_end_time_choice_value"
            android:layout_width="307dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="未选择"
            android:textAlignment="viewEnd" />

        <TextView
            android:id="@+id/roll_call_end_time_choice_value_att"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="viewEnd"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/roll_call_linearLayout7"
        android:layout_width="409dp"
        android:layout_height="46dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roll_call_linearLayout4">

        <Button
            android:id="@+id/roll_call_query_button"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/query_button"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/roll_call_linearLayout5"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/underline"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roll_call_linearLayout7">

        <TextView
            android:id="@+id/add_group_linearLayout4_textview_1"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/str_roll_call_choiced_student"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/roll_call_linearLayout1_show_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/underline"
                android:orientation="vertical">
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/roll_call_linearLayout6"
        android:layout_width="409dp"
        android:layout_height="46dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roll_call_linearLayout5">

        <Button
            android:id="@+id/roll_call_confirm_button"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/str_roll_call_confirm"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>