<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/add_group_title_str"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="89dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/add_group_linearLayout1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/add_group_linearLayout1"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:background="@drawable/underline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_group_title_str">

        <TextView
            android:id="@+id/coath_choice_name"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:background="#00C7C4C4"
            android:text="@string/str_group_choice_coach" />

        <TextView
            android:id="@+id/coath_choice_value"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="未选择"
            android:textAlignment="viewEnd" />

        <TextView
            android:id="@+id/coath_choice_value_att"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="viewEnd"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_group_linearLayout2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/underline"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_group_title_str">

        <TextView
            android:id="@+id/address_choice_name"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/str_group_choice_address" />

        <TextView
            android:id="@+id/address_choice_value"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="未选择"
            android:textAlignment="viewEnd" />

        <TextView
            android:id="@+id/address_choice_value_att"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="viewEnd"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_group_linearLayout3"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="128dp"
        android:background="@drawable/underline"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_group_title_str">

        <TextView
            android:id="@+id/begin_date_choice_name"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/str_group_choice_group_begin_date" />

        <TextView
            android:id="@+id/begin_date_choice_value"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="未选择"
            android:textAlignment="viewEnd" />

        <TextView
            android:id="@+id/begin_date_choice_value_att"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="viewEnd"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_group_linearLayout4"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="188dp"
        android:background="@drawable/underline"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_group_title_str">

        <TextView
            android:id="@+id/end_date_choice_name"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/str_group_choice_group_end_daye" />

        <TextView
            android:id="@+id/end_date_choice_value"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="未选择"
            android:textAlignment="viewEnd" />

        <TextView
            android:id="@+id/end_date_choice_value_att"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="viewEnd"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_group_linearLayout5"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="248dp"
        android:background="@drawable/underline"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_group_title_str">

        <TextView
            android:id="@+id/learn_begin_choice_name"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/str_group_choice_learn_begin_time" />

        <TextView
            android:id="@+id/learn_begin_choice_value"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="未选择"
            android:textAlignment="viewEnd" />

        <TextView
            android:id="@+id/learn_begin_choice_value_att"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="viewEnd"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_group_linearLayout6"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="308dp"
        android:background="@drawable/underline"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_group_title_str">

        <TextView
            android:id="@+id/course_level_choice_name"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/str_group_choice_course_level" />

        <TextView
            android:id="@+id/course_level_choice_value"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="未选择"
            android:textAlignment="viewEnd" />

        <TextView
            android:id="@+id/course_level_choice_value_att"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="viewEnd"
            android:visibility="gone"/>
    </LinearLayout>

    <Button
        android:id="@+id/add_group_submin_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="59dp"
        android:background="#009688"
        android:text="确认创建"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>